...
            "state": "translated",
            "value": "Actif. Cet appareil est %@, %@."
          }
        }
      }
    },
    "Actions de la conversation": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Conversation actions"
...
            "state": "translated",
            "value": "Allemand"
          }
        }
      }
    },
    "Aller au dernier message": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Go to the latest message"
...
            "state": "translated",
            "value": "Cacher la phrase"
          }
        }
      }
    },
    "Caméra": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Camera"
...
            "state": "translated",
            "value": "Copier le numéro"
          }
        }
      }
    },
    "Copier le texte": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Copy text"
...
            "state": "translated",
            "value": "Espagnol"
          }
        }
      }
    },
    "Fermer": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Close"
...
            "state": "translated",
            "value": "Me le rappeler…"
          }
        }
      }
    },
    "Membres": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Members"
...
            "state": "translated",
            "value": "Médias"
          }
        }
      }
    },
    "Ne plus citer ce message": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Stop quoting this message"
...
            "state": "translated",
            "value": "Recharger depuis le Relais"
          }
        }
      }
    },
    "Rechercher": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Search"
...
            "state": "translated",
            "value": "Répondre"
          }
        }
      }
    },
    "Répondre en citant": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Reply with quote"
...
            "state": "translated",
            "value": "Suspendre le message audio"
          }
        }
      }
    },
    "Sélectionner": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Select"
...
            "state": "translated",
            "value": "Tous les réseaux"
          }
        }
      }
    },
    "Tout copier": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Copy all"
...
            "state": "translated",
            "value": "Un air de machine à écrire"
          }
        }
      }
    },
    "Un autre emoji": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Another emoji"
...
